修改官网首页和FAQ部分文案

--- a/src/faq.html
+++ b/src/faq.html
@@ -59,10 +59,10 @@
                 <h4>周末辅导班或寒暑假辅导班想用车，可以提供服务吗？</h4>
                 <p>在资源可以调配的情况下，可以满足您的需求。事先需要沟通好时间及路线，单独定制产品报价即可服务。</p>
             </div>
-            <div class="qa-item">
+            <!-- <div class="qa-item">
                 <h4>家长可以跟车陪护吗？</h4>
                 <p>家长可以跟车陪护。原则上，上学服务司机师傅到达学校后行程即结束，家长需要自行解决后续行程安排。放学服务，司机师傅会提前接上家长前往学校再接孩子放学。</p>
-            </div>
+            </div> -->
             <div class="qa-item">
                 <h4>拼线（合乘）是怎么安排的？</h4>
                 <p>原则上，拼线（合乘）的孩子是同一所学校的学生，且居住位置为沿途小区，等候时间不超过15分钟即可安排同一条线路拼线（合乘）服务。超过以上条件，可以单独安排上下学接送服务。</p>
@@ -105,7 +105,7 @@
             </div>
             <div class="qa-item">
                 <h4>每天服务的司机是固定的么？</h4>
-                <p>每条路线的服务司机都是固定的，只有当服务司机临时有事，或生病时，才会临时更换司机，在更换前，客服人员会提前将替换司机信息发送给您。</p>
+                <p>每条路线的驾驶员都是相对固定的，只有遇到特殊情况（例如生病、请假）或线路优化时才会更换，在更换驾驶员之前，客服人员会提前和家长沟通。</p>
             </div>
         </div>
     </div>
