--- a/src/index.html
+++ b/src/index.html
@@ -136,7 +136,7 @@
             <img class="feature-img" src="img/feature-driver.png">
         </div>
         <div class="view feature">
-            <p class="feature-title">高端7座商务车</p>
+            <p class="feature-title">更全面的安全保障</p>
             <img class="feature-img" src="img/feature-bus.png">
         </div>
         <div class="view feature">
